# chronos

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.cursor/rules/: agents-md.mdc  rust-style.mdc
.cursor/skills/build-container-image/: SKILL.md
crates/chronos-chrony/: Cargo.toml
crates/chronos-chrony/src/: lib.rs  sock_refclock.rs  writer.rs
crates/chronos-core/: Cargo.toml
crates/chronos-core/src/: clock.rs  config.rs  error.rs  estimate.rs  lib.rs  sample.rs  status.rs
crates/chronos-gateway/: Cargo.toml
crates/chronos-gateway/src/: backend_client.rs  config.rs  filter.rs  main.rs  sampler.rs  scheduler.rs  status_api.rs
crates/chronos-ntp/: Cargo.toml
crates/chronos-ntp/src/: lib.rs  shm_refclock.rs  writer.rs
crates/chronos-server/: Cargo.toml
crates/chronos-server/src/: api.rs  config.rs  main.rs  status_provider.rs  tls.rs
docs/: architecture.md  chrony-integration.md  deployment-gateway.md  deployment-server.md  develop-plan.md  ntp-shm-integration.md  protocol.md  security.md  troubleshooting.md
docs/plans/: 20260620_0823_chronos_time_sync_gateway.md  20260620_0956_chronos_deployment_guide.md  20260621_1809_chronos_daemon_agnostic_and_rootless_deployment.md  20260622_1608_kubernetes_gateway_readme_updates.md
docs/standards/: architecture.md  rust-style.md
examples/compose/: docker-compose.gateway.chrony.yml  docker-compose.gateway.yml  docker-compose.server.yml
examples/config/: chrony.gateway.conf  gateway.chrony.yaml  gateway.yaml  server.http.yaml  server.https.yaml
examples/k8s/gateway/: README.md
examples/k8s/gateway/base/: deployment.yaml  kustomization.yaml  namespace.yaml
examples/k8s/gateway/chrony/: configmap.yaml  deployment-patch.yaml  kustomization.yaml
examples/k8s/gateway/ntpd/: configmap.yaml
examples/k8s/gateway/ntpsec/: configmap.yaml  kustomization.yaml
inventory/: README.md  servers.example.yaml
packaging/: setup-chrony-refclock.sh
packaging/nginx/: chronos-server.conf
packaging/systemd/: chronos-gateway-chrony.service  chronos-gateway.service  chronos-server.service
packaging/tmpfiles.d/: chronos.conf
skills/: README.md
skills/build-container-image/: SKILL.md
skills/build-container-image/scripts/: build-image.sh
skills/git-commit/: SKILL.md
