[package]
name = "chronos-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Chronos gateway: samples a Time API backend and feeds chrony's SOCK refclock."

[[bin]]
name = "chronos-gateway"
path = "src/main.rs"

[dependencies]
chronos-core.workspace = true
chronos-chrony.workspace = true
chronos-ntp.workspace = true
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls-no-provider", "json", "charset"] }
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring", "tls12", "std"] }
webpki-roots = "1.0.8"
sha2 = "0.11.0"
base64 = "0.22.1"
x509-parser = "0.18.1"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full"] }
wiremock = "0.6.5"
