[package]
name = "chronos-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Chronos HTTP/HTTPS Time API server."

[[bin]]
name = "chronos-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
chronos-core.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
rustls = "0.23.40"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[dev-dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
